src/lib/parser/mocha/mocha_script.peg
_ <- WHITESPACE*
__ <- WHITESPACE (WHITESPACE)*

WHITESPACE <- "\t" / " "

TERMINATOR <- "\n" { TYRAN_LOG("TERMINATOR!"); }
	/ ';'

start <- body { TYRAN_LOG("start!"); }

return <- "return" (__ expression)? { TYRAN_LOG("return!"); }

body <- (line)*

function_glyph <-
	'->' { TYRAN_LOG("function_glyph!"); }
	/ '=>' { TYRAN_LOG("function_glyph_bound!"); }

function <- _ '(' _ parameter_list _ ')' _ function_glyph { TYRAN_LOG("function!"); }

value <-
	number
	/ bool
	/ null
	/ undefined
	/ identifier
	/ string


string <-
	simple_string
	/ complex_string

complex_string <-
	'"' complex_string_contents* '"' { TYRAN_LOG("STRING!"); }

complex_string_contents <-
	[^"\\#]

simple_string <-
	"'" simple_string_contents* "'" { TYRAN_LOG("SIMPLE STRING!"); }

simple_string_contents <-
	[^'\\#]

bool <-
	"true" { TYRAN_LOG("TRUE!"); }
	/ "false" { TYRAN_LOG("FALSE!"); }

undefined <-
	"undefined" { TYRAN_LOG("UNDEFINED!"); }

null <-
	"null" { TYRAN_LOG("NULL!"); }

alpha <-
	[a-zA-Z_]

alpha_digit <-
	alpha
	/ digit

identifier <-
	alpha alpha_digit* { TYRAN_LOG("Identifier!"); }

parameter_list <-
	(parameter (',' parameter )*)* { TYRAN_LOG("parameters!"); }

parameter <-
	value

line <-
	expression _ TERMINATOR { TYRAN_LOG("line!"); }
	/ statement _ TERMINATOR { TYRAN_LOG("statement!"); }

digit <- [0-9]

number <- (digit)+ { TYRAN_LOG("number!"); }

expression <-
	value
	/ function

statement <-
	return
