src/lib/parser/mocha/mocha_script.c
/* A recursive-descent parser generated by peg 0.1.9 */

#include <stdio.h>
#include <stdlib.h>
#include <string.h>
#define YYRULECOUNT 28
#ifndef YY_LOCAL
#define YY_LOCAL(T)	static T
#endif
#ifndef YY_ACTION
#define YY_ACTION(T)	static T
#endif
#ifndef YY_RULE
#define YY_RULE(T)	static T
#endif
#ifndef YY_PARSE
#define YY_PARSE(T)	T
#endif
#ifndef YYPARSE
#define YYPARSE		yyparse
#endif
#ifndef YYPARSEFROM
#define YYPARSEFROM	yyparsefrom
#endif
#ifndef YY_INPUT
#define YY_INPUT(buf, result, max_size)			\
  {							\
    int yyc= getchar();					\
    result= (EOF == yyc) ? 0 : (*(buf)= yyc, 1);	\
    yyprintf((stderr, "<%c>", yyc));			\
  }
#endif
#ifndef YY_BEGIN
#define YY_BEGIN	( ctx->begin= ctx->pos, 1)
#endif
#ifndef YY_END
#define YY_END		( ctx->end= ctx->pos, 1)
#endif
#ifdef YY_DEBUG
# define yyprintf(args)	fprintf args
#else
# define yyprintf(args)
#endif
#ifndef YYSTYPE
#define YYSTYPE	int
#endif

#ifndef YY_PART

typedef struct _yycontext yycontext;
typedef void (*yyaction)(yycontext *ctx, char *yytext, int yyleng);
typedef struct _yythunk { int begin, end;  yyaction  action;  struct _yythunk *next; } yythunk;

struct _yycontext {
  char     *buf;
  int       buflen;
  int       pos;
  int       limit;
  char     *text;
  int       textlen;
  int       begin;
  int       end;
  int       textmax;
  yythunk  *thunks;
  int       thunkslen;
  int       thunkpos;
  YYSTYPE   yy;
  YYSTYPE  *val;
  YYSTYPE  *vals;
  int       valslen;
#ifdef YY_CTX_MEMBERS
  YY_CTX_MEMBERS
#endif
};

#ifdef YY_CTX_LOCAL
#define YY_CTX_PARAM_	yycontext *yyctx,
#define YY_CTX_PARAM	yycontext *yyctx
#define YY_CTX_ARG_	yyctx,
#define YY_CTX_ARG	yyctx
#else
#define YY_CTX_PARAM_
#define YY_CTX_PARAM
#define YY_CTX_ARG_
#define YY_CTX_ARG
yycontext yyctx0;
yycontext *yyctx= &yyctx0;
#endif

YY_LOCAL(int) yyrefill(yycontext *ctx)
{
  int yyn;
  while (ctx->buflen - ctx->pos < 512)
    {
      ctx->buflen *= 2;
      ctx->buf= (char *)realloc(ctx->buf, ctx->buflen);
    }
  YY_INPUT((ctx->buf + ctx->pos), yyn, (ctx->buflen - ctx->pos));
  if (!yyn) return 0;
  ctx->limit += yyn;
  return 1;
}

YY_LOCAL(int) yymatchDot(yycontext *ctx)
{
  if (ctx->pos >= ctx->limit && !yyrefill(ctx)) return 0;
  ++ctx->pos;
  return 1;
}

YY_LOCAL(int) yymatchChar(yycontext *ctx, int c)
{
  if (ctx->pos >= ctx->limit && !yyrefill(ctx)) return 0;
  if ((unsigned char)ctx->buf[ctx->pos] == c)
    {
      ++ctx->pos;
      yyprintf((stderr, "  ok   yymatchChar(ctx, %c) @ %s\n", c, ctx->buf+ctx->pos));
      return 1;
    }
  yyprintf((stderr, "  fail yymatchChar(ctx, %c) @ %s\n", c, ctx->buf+ctx->pos));
  return 0;
}

YY_LOCAL(int) yymatchString(yycontext *ctx, char *s)
{
  int yysav= ctx->pos;
  while (*s)
    {
      if (ctx->pos >= ctx->limit && !yyrefill(ctx)) return 0;
      if (ctx->buf[ctx->pos] != *s)
        {
          ctx->pos= yysav;
          return 0;
        }
      ++s;
      ++ctx->pos;
    }
  return 1;
}

YY_LOCAL(int) yymatchClass(yycontext *ctx, unsigned char *bits)
{
  int c;
  if (ctx->pos >= ctx->limit && !yyrefill(ctx)) return 0;
  c= (unsigned char)ctx->buf[ctx->pos];
  if (bits[c >> 3] & (1 << (c & 7)))
    {
      ++ctx->pos;
      yyprintf((stderr, "  ok   yymatchClass @ %s\n", ctx->buf+ctx->pos));
      return 1;
    }
  yyprintf((stderr, "  fail yymatchClass @ %s\n", ctx->buf+ctx->pos));
  return 0;
}

YY_LOCAL(void) yyDo(yycontext *ctx, yyaction action, int begin, int end)
{
  while (ctx->thunkpos >= ctx->thunkslen)
    {
      ctx->thunkslen *= 2;
      ctx->thunks= (yythunk *)realloc(ctx->thunks, sizeof(yythunk) * ctx->thunkslen);
    }
  ctx->thunks[ctx->thunkpos].begin=  begin;
  ctx->thunks[ctx->thunkpos].end=    end;
  ctx->thunks[ctx->thunkpos].action= action;
  ++ctx->thunkpos;
}

YY_LOCAL(int) yyText(yycontext *ctx, int begin, int end)
{
  int yyleng= end - begin;
  if (yyleng <= 0)
    yyleng= 0;
  else
    {
      while (ctx->textlen < (yyleng + 1))
	{
	  ctx->textlen *= 2;
	  ctx->text= (char *)realloc(ctx->text, ctx->textlen);
	}
      memcpy(ctx->text, ctx->buf + begin, yyleng);
    }
  ctx->text[yyleng]= '\0';
  return yyleng;
}

YY_LOCAL(void) yyDone(yycontext *ctx)
{
  int pos;
  for (pos= 0;  pos < ctx->thunkpos;  ++pos)
    {
      yythunk *thunk= &ctx->thunks[pos];
      int yyleng= thunk->end ? yyText(ctx, thunk->begin, thunk->end) : thunk->begin;
      yyprintf((stderr, "DO [%d] %p %s\n", pos, thunk->action, ctx->text));
      thunk->action(ctx, ctx->text, yyleng);
    }
  ctx->thunkpos= 0;
}

YY_LOCAL(void) yyCommit(yycontext *ctx)
{
  if ((ctx->limit -= ctx->pos))
    {
      memmove(ctx->buf, ctx->buf + ctx->pos, ctx->limit);
    }
  ctx->begin -= ctx->pos;
  ctx->end -= ctx->pos;
  ctx->pos= ctx->thunkpos= 0;
}

YY_LOCAL(int) yyAccept(yycontext *ctx, int tp0)
{
  if (tp0)
    {
      fprintf(stderr, "accept denied at %d\n", tp0);
      return 0;
    }
  else
    {
      yyDone(ctx);
      yyCommit(ctx);
    }
  return 1;
}

YY_LOCAL(void) yyPush(yycontext *ctx, char *text, int count)  { ctx->val += count; }
YY_LOCAL(void) yyPop(yycontext *ctx, char *text, int count)   { ctx->val -= count; }
YY_LOCAL(void) yySet(yycontext *ctx, char *text, int count)   { ctx->val[count]= ctx->yy; }

#endif /* YY_PART */

#define	YYACCEPT	yyAccept(ctx, yythunkpos0)

YY_RULE(int) yy_statement(yycontext *ctx); /* 28 */
YY_RULE(int) yy_parameter(yycontext *ctx); /* 27 */
YY_RULE(int) yy_digit(yycontext *ctx); /* 26 */
YY_RULE(int) yy_alpha_digit(yycontext *ctx); /* 25 */
YY_RULE(int) yy_alpha(yycontext *ctx); /* 24 */
YY_RULE(int) yy_simple_string_contents(yycontext *ctx); /* 23 */
YY_RULE(int) yy_complex_string_contents(yycontext *ctx); /* 22 */
YY_RULE(int) yy_complex_string(yycontext *ctx); /* 21 */
YY_RULE(int) yy_simple_string(yycontext *ctx); /* 20 */
YY_RULE(int) yy_string(yycontext *ctx); /* 19 */
YY_RULE(int) yy_identifier(yycontext *ctx); /* 18 */
YY_RULE(int) yy_undefined(yycontext *ctx); /* 17 */
YY_RULE(int) yy_null(yycontext *ctx); /* 16 */
YY_RULE(int) yy_bool(yycontext *ctx); /* 15 */
YY_RULE(int) yy_number(yycontext *ctx); /* 14 */
YY_RULE(int) yy_value(yycontext *ctx); /* 13 */
YY_RULE(int) yy_parameter_list(yycontext *ctx); /* 12 */
YY_RULE(int) yy_function(yycontext *ctx); /* 11 */
YY_RULE(int) yy_function_glyph(yycontext *ctx); /* 10 */
YY_RULE(int) yy_line(yycontext *ctx); /* 9 */
YY_RULE(int) yy_expression(yycontext *ctx); /* 8 */
YY_RULE(int) yy_return(yycontext *ctx); /* 7 */
YY_RULE(int) yy_body(yycontext *ctx); /* 6 */
YY_RULE(int) yy_start(yycontext *ctx); /* 5 */
YY_RULE(int) yy_TERMINATOR(yycontext *ctx); /* 4 */
YY_RULE(int) yy___(yycontext *ctx); /* 3 */
YY_RULE(int) yy_WHITESPACE(yycontext *ctx); /* 2 */
YY_RULE(int) yy__(yycontext *ctx); /* 1 */

YY_ACTION(void) yy_1_number(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_1_number\n"));
   TYRAN_LOG("number!"); ;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_2_line(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_2_line\n"));
   TYRAN_LOG("statement!"); ;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_line(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_1_line\n"));
   TYRAN_LOG("line!"); ;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_parameter_list(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_1_parameter_list\n"));
   TYRAN_LOG("parameters!"); ;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_identifier(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_1_identifier\n"));
   TYRAN_LOG("Identifier!"); ;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_null(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_1_null\n"));
   TYRAN_LOG("NULL!"); ;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_undefined(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_1_undefined\n"));
   TYRAN_LOG("UNDEFINED!"); ;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_2_bool(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_2_bool\n"));
   TYRAN_LOG("FALSE!"); ;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_bool(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_1_bool\n"));
   TYRAN_LOG("TRUE!"); ;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_simple_string(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_1_simple_string\n"));
   TYRAN_LOG("SIMPLE STRING!"); ;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_complex_string(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_1_complex_string\n"));
   TYRAN_LOG("STRING!"); ;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_function(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_1_function\n"));
   TYRAN_LOG("function!"); ;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_2_function_glyph(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_2_function_glyph\n"));
   TYRAN_LOG("function_glyph_bound!"); ;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_function_glyph(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_1_function_glyph\n"));
   TYRAN_LOG("function_glyph!"); ;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_return(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_1_return\n"));
   TYRAN_LOG("return!"); ;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_start(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_1_start\n"));
   TYRAN_LOG("start!"); ;
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_TERMINATOR(yycontext *ctx, char *yytext, int yyleng)
{
#define yy ctx->yy
#define yypos ctx->pos
#define yythunkpos ctx->thunkpos
  yyprintf((stderr, "do yy_1_TERMINATOR\n"));
   TYRAN_LOG("TERMINATOR!"); ;
#undef yythunkpos
#undef yypos
#undef yy
}

YY_RULE(int) yy_statement(yycontext *ctx)
{  int yypos0= ctx->pos, yythunkpos0= ctx->thunkpos;
  yyprintf((stderr, "%s\n", "statement"));  if (!yy_return(ctx)) goto l1;
  yyprintf((stderr, "  ok   %s @ %s\n", "statement", ctx->buf+ctx->pos));
  return 1;
  l1:;	  ctx->pos= yypos0; ctx->thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "statement", ctx->buf+ctx->pos));
  return 0;
}
YY_RULE(int) yy_parameter(yycontext *ctx)
{  int yypos0= ctx->pos, yythunkpos0= ctx->thunkpos;
  yyprintf((stderr, "%s\n", "parameter"));  if (!yy_value(ctx)) goto l2;
  yyprintf((stderr, "  ok   %s @ %s\n", "parameter", ctx->buf+ctx->pos));
  return 1;
  l2:;	  ctx->pos= yypos0; ctx->thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "parameter", ctx->buf+ctx->pos));
  return 0;
}
YY_RULE(int) yy_digit(yycontext *ctx)
{  int yypos0= ctx->pos, yythunkpos0= ctx->thunkpos;
  yyprintf((stderr, "%s\n", "digit"));  if (!yymatchClass(ctx, (unsigned char *)"\000\000\000\000\000\000\377\003\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l3;
  yyprintf((stderr, "  ok   %s @ %s\n", "digit", ctx->buf+ctx->pos));
  return 1;
  l3:;	  ctx->pos= yypos0; ctx->thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "digit", ctx->buf+ctx->pos));
  return 0;
}
YY_RULE(int) yy_alpha_digit(yycontext *ctx)
{  int yypos0= ctx->pos, yythunkpos0= ctx->thunkpos;
  yyprintf((stderr, "%s\n", "alpha_digit"));
  {  int yypos5= ctx->pos, yythunkpos5= ctx->thunkpos;  if (!yy_alpha(ctx)) goto l6;  goto l5;
  l6:;	  ctx->pos= yypos5; ctx->thunkpos= yythunkpos5;  if (!yy_digit(ctx)) goto l4;
  }
  l5:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "alpha_digit", ctx->buf+ctx->pos));
  return 1;
  l4:;	  ctx->pos= yypos0; ctx->thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "alpha_digit", ctx->buf+ctx->pos));
  return 0;
}
YY_RULE(int) yy_alpha(yycontext *ctx)
{  int yypos0= ctx->pos, yythunkpos0= ctx->thunkpos;
  yyprintf((stderr, "%s\n", "alpha"));  if (!yymatchClass(ctx, (unsigned char *)"\000\000\000\000\000\000\000\000\376\377\377\207\376\377\377\007\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l7;
  yyprintf((stderr, "  ok   %s @ %s\n", "alpha", ctx->buf+ctx->pos));
  return 1;
  l7:;	  ctx->pos= yypos0; ctx->thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "alpha", ctx->buf+ctx->pos));
  return 0;
}
YY_RULE(int) yy_simple_string_contents(yycontext *ctx)
{  int yypos0= ctx->pos, yythunkpos0= ctx->thunkpos;
  yyprintf((stderr, "%s\n", "simple_string_contents"));  if (!yymatchClass(ctx, (unsigned char *)"\377\377\377\377\167\377\377\377\377\377\377\357\377\377\377\377\377\377\377\377\377\377\377\377\377\377\377\377\377\377\377\377")) goto l8;
  yyprintf((stderr, "  ok   %s @ %s\n", "simple_string_contents", ctx->buf+ctx->pos));
  return 1;
  l8:;	  ctx->pos= yypos0; ctx->thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "simple_string_contents", ctx->buf+ctx->pos));
  return 0;
}
YY_RULE(int) yy_complex_string_contents(yycontext *ctx)
{  int yypos0= ctx->pos, yythunkpos0= ctx->thunkpos;
  yyprintf((stderr, "%s\n", "complex_string_contents"));  if (!yymatchClass(ctx, (unsigned char *)"\377\377\377\377\363\377\377\377\377\377\377\357\377\377\377\377\377\377\377\377\377\377\377\377\377\377\377\377\377\377\377\377")) goto l9;
  yyprintf((stderr, "  ok   %s @ %s\n", "complex_string_contents", ctx->buf+ctx->pos));
  return 1;
  l9:;	  ctx->pos= yypos0; ctx->thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "complex_string_contents", ctx->buf+ctx->pos));
  return 0;
}
YY_RULE(int) yy_complex_string(yycontext *ctx)
{  int yypos0= ctx->pos, yythunkpos0= ctx->thunkpos;
  yyprintf((stderr, "%s\n", "complex_string"));  if (!yymatchChar(ctx, '"')) goto l10;
  l11:;	
  {  int yypos12= ctx->pos, yythunkpos12= ctx->thunkpos;  if (!yy_complex_string_contents(ctx)) goto l12;  goto l11;
  l12:;	  ctx->pos= yypos12; ctx->thunkpos= yythunkpos12;
  }  if (!yymatchChar(ctx, '"')) goto l10;  yyDo(ctx, yy_1_complex_string, ctx->begin, ctx->end);
  yyprintf((stderr, "  ok   %s @ %s\n", "complex_string", ctx->buf+ctx->pos));
  return 1;
  l10:;	  ctx->pos= yypos0; ctx->thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "complex_string", ctx->buf+ctx->pos));
  return 0;
}
YY_RULE(int) yy_simple_string(yycontext *ctx)
{  int yypos0= ctx->pos, yythunkpos0= ctx->thunkpos;
  yyprintf((stderr, "%s\n", "simple_string"));  if (!yymatchChar(ctx, '\'')) goto l13;
  l14:;	
  {  int yypos15= ctx->pos, yythunkpos15= ctx->thunkpos;  if (!yy_simple_string_contents(ctx)) goto l15;  goto l14;
  l15:;	  ctx->pos= yypos15; ctx->thunkpos= yythunkpos15;
  }  if (!yymatchChar(ctx, '\'')) goto l13;  yyDo(ctx, yy_1_simple_string, ctx->begin, ctx->end);
  yyprintf((stderr, "  ok   %s @ %s\n", "simple_string", ctx->buf+ctx->pos));
  return 1;
  l13:;	  ctx->pos= yypos0; ctx->thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "simple_string", ctx->buf+ctx->pos));
  return 0;
}
YY_RULE(int) yy_string(yycontext *ctx)
{  int yypos0= ctx->pos, yythunkpos0= ctx->thunkpos;
  yyprintf((stderr, "%s\n", "string"));
  {  int yypos17= ctx->pos, yythunkpos17= ctx->thunkpos;  if (!yy_simple_string(ctx)) goto l18;  goto l17;
  l18:;	  ctx->pos= yypos17; ctx->thunkpos= yythunkpos17;  if (!yy_complex_string(ctx)) goto l16;
  }
  l17:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "string", ctx->buf+ctx->pos));
  return 1;
  l16:;	  ctx->pos= yypos0; ctx->thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "string", ctx->buf+ctx->pos));
  return 0;
}
YY_RULE(int) yy_identifier(yycontext *ctx)
{  int yypos0= ctx->pos, yythunkpos0= ctx->thunkpos;
  yyprintf((stderr, "%s\n", "identifier"));  if (!yy_alpha(ctx)) goto l19;
  l20:;	
  {  int yypos21= ctx->pos, yythunkpos21= ctx->thunkpos;  if (!yy_alpha_digit(ctx)) goto l21;  goto l20;
  l21:;	  ctx->pos= yypos21; ctx->thunkpos= yythunkpos21;
  }  yyDo(ctx, yy_1_identifier, ctx->begin, ctx->end);
  yyprintf((stderr, "  ok   %s @ %s\n", "identifier", ctx->buf+ctx->pos));
  return 1;
  l19:;	  ctx->pos= yypos0; ctx->thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "identifier", ctx->buf+ctx->pos));
  return 0;
}
YY_RULE(int) yy_undefined(yycontext *ctx)
{  int yypos0= ctx->pos, yythunkpos0= ctx->thunkpos;
  yyprintf((stderr, "%s\n", "undefined"));  if (!yymatchString(ctx, "undefined")) goto l22;  yyDo(ctx, yy_1_undefined, ctx->begin, ctx->end);
  yyprintf((stderr, "  ok   %s @ %s\n", "undefined", ctx->buf+ctx->pos));
  return 1;
  l22:;	  ctx->pos= yypos0; ctx->thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "undefined", ctx->buf+ctx->pos));
  return 0;
}
YY_RULE(int) yy_null(yycontext *ctx)
{  int yypos0= ctx->pos, yythunkpos0= ctx->thunkpos;
  yyprintf((stderr, "%s\n", "null"));  if (!yymatchString(ctx, "null")) goto l23;  yyDo(ctx, yy_1_null, ctx->begin, ctx->end);
  yyprintf((stderr, "  ok   %s @ %s\n", "null", ctx->buf+ctx->pos));
  return 1;
  l23:;	  ctx->pos= yypos0; ctx->thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "null", ctx->buf+ctx->pos));
  return 0;
}
YY_RULE(int) yy_bool(yycontext *ctx)
{  int yypos0= ctx->pos, yythunkpos0= ctx->thunkpos;
  yyprintf((stderr, "%s\n", "bool"));
  {  int yypos25= ctx->pos, yythunkpos25= ctx->thunkpos;  if (!yymatchString(ctx, "true")) goto l26;  yyDo(ctx, yy_1_bool, ctx->begin, ctx->end);  goto l25;
  l26:;	  ctx->pos= yypos25; ctx->thunkpos= yythunkpos25;  if (!yymatchString(ctx, "false")) goto l24;  yyDo(ctx, yy_2_bool, ctx->begin, ctx->end);
  }
  l25:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "bool", ctx->buf+ctx->pos));
  return 1;
  l24:;	  ctx->pos= yypos0; ctx->thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "bool", ctx->buf+ctx->pos));
  return 0;
}
YY_RULE(int) yy_number(yycontext *ctx)
{  int yypos0= ctx->pos, yythunkpos0= ctx->thunkpos;
  yyprintf((stderr, "%s\n", "number"));  if (!yy_digit(ctx)) goto l27;
  l28:;	
  {  int yypos29= ctx->pos, yythunkpos29= ctx->thunkpos;  if (!yy_digit(ctx)) goto l29;  goto l28;
  l29:;	  ctx->pos= yypos29; ctx->thunkpos= yythunkpos29;
  }  yyDo(ctx, yy_1_number, ctx->begin, ctx->end);
  yyprintf((stderr, "  ok   %s @ %s\n", "number", ctx->buf+ctx->pos));
  return 1;
  l27:;	  ctx->pos= yypos0; ctx->thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "number", ctx->buf+ctx->pos));
  return 0;
}
YY_RULE(int) yy_value(yycontext *ctx)
{  int yypos0= ctx->pos, yythunkpos0= ctx->thunkpos;
  yyprintf((stderr, "%s\n", "value"));
  {  int yypos31= ctx->pos, yythunkpos31= ctx->thunkpos;  if (!yy_number(ctx)) goto l32;  goto l31;
  l32:;	  ctx->pos= yypos31; ctx->thunkpos= yythunkpos31;  if (!yy_bool(ctx)) goto l33;  goto l31;
  l33:;	  ctx->pos= yypos31; ctx->thunkpos= yythunkpos31;  if (!yy_null(ctx)) goto l34;  goto l31;
  l34:;	  ctx->pos= yypos31; ctx->thunkpos= yythunkpos31;  if (!yy_undefined(ctx)) goto l35;  goto l31;
  l35:;	  ctx->pos= yypos31; ctx->thunkpos= yythunkpos31;  if (!yy_identifier(ctx)) goto l36;  goto l31;
  l36:;	  ctx->pos= yypos31; ctx->thunkpos= yythunkpos31;  if (!yy_string(ctx)) goto l30;
  }
  l31:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "value", ctx->buf+ctx->pos));
  return 1;
  l30:;	  ctx->pos= yypos0; ctx->thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "value", ctx->buf+ctx->pos));
  return 0;
}
YY_RULE(int) yy_parameter_list(yycontext *ctx)
{  int yypos0= ctx->pos, yythunkpos0= ctx->thunkpos;
  yyprintf((stderr, "%s\n", "parameter_list"));
  l38:;	
  {  int yypos39= ctx->pos, yythunkpos39= ctx->thunkpos;  if (!yy_parameter(ctx)) goto l39;
  l40:;	
  {  int yypos41= ctx->pos, yythunkpos41= ctx->thunkpos;  if (!yymatchChar(ctx, ',')) goto l41;  if (!yy_parameter(ctx)) goto l41;  goto l40;
  l41:;	  ctx->pos= yypos41; ctx->thunkpos= yythunkpos41;
  }  goto l38;
  l39:;	  ctx->pos= yypos39; ctx->thunkpos= yythunkpos39;
  }  yyDo(ctx, yy_1_parameter_list, ctx->begin, ctx->end);
  yyprintf((stderr, "  ok   %s @ %s\n", "parameter_list", ctx->buf+ctx->pos));
  return 1;
  l37:;	  ctx->pos= yypos0; ctx->thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "parameter_list", ctx->buf+ctx->pos));
  return 0;
}
YY_RULE(int) yy_function(yycontext *ctx)
{  int yypos0= ctx->pos, yythunkpos0= ctx->thunkpos;
  yyprintf((stderr, "%s\n", "function"));  if (!yy__(ctx)) goto l42;  if (!yymatchChar(ctx, '(')) goto l42;  if (!yy__(ctx)) goto l42;  if (!yy_parameter_list(ctx)) goto l42;  if (!yy__(ctx)) goto l42;  if (!yymatchChar(ctx, ')')) goto l42;  if (!yy__(ctx)) goto l42;  if (!yy_function_glyph(ctx)) goto l42;  yyDo(ctx, yy_1_function, ctx->begin, ctx->end);
  yyprintf((stderr, "  ok   %s @ %s\n", "function", ctx->buf+ctx->pos));
  return 1;
  l42:;	  ctx->pos= yypos0; ctx->thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "function", ctx->buf+ctx->pos));
  return 0;
}
YY_RULE(int) yy_function_glyph(yycontext *ctx)
{  int yypos0= ctx->pos, yythunkpos0= ctx->thunkpos;
  yyprintf((stderr, "%s\n", "function_glyph"));
  {  int yypos44= ctx->pos, yythunkpos44= ctx->thunkpos;  if (!yymatchString(ctx, "->")) goto l45;  yyDo(ctx, yy_1_function_glyph, ctx->begin, ctx->end);  goto l44;
  l45:;	  ctx->pos= yypos44; ctx->thunkpos= yythunkpos44;  if (!yymatchString(ctx, "=>")) goto l43;  yyDo(ctx, yy_2_function_glyph, ctx->begin, ctx->end);
  }
  l44:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "function_glyph", ctx->buf+ctx->pos));
  return 1;
  l43:;	  ctx->pos= yypos0; ctx->thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "function_glyph", ctx->buf+ctx->pos));
  return 0;
}
YY_RULE(int) yy_line(yycontext *ctx)
{  int yypos0= ctx->pos, yythunkpos0= ctx->thunkpos;
